--- a/src/yml/stack.yml
+++ b/src/yml/stack.yml
@@ -30,3 +30,55 @@ Resources:
       ProvisionedThroughput:
         ReadCapacityUnits: 5
         WriteCapacityUnits: 5
+
+  LambdaGet:
+    Type: "AWS::Lambda::Function"
+    Properties:
+      FunctionName: GetMessages
+      Handler: index.handler
+      Role: !GetAtt [ LambdaFunctionRole, Arn ]
+      Runtime: python2.7
+      Code:
+        ZipFile: >
+          import boto3
+          def handler(event, context):
+              messages = []
+              db_client = boto3.client('dynamodb')
+              items = db_client.scan(TableName='Messages', Select='ALL_ATTRIBUTES')['Items']
+              for item in items:
+                  messages.append({
+                      'message': item['Message']['S'],
+                      'author': item['Author']['S'],
+                      'date': item['Date']['S']
+                  })
+              return sorted(messages, key=lambda msg: msg['date'], reverse=True)
+
+  LambdaFunctionRole:
+    Type: "AWS::IAM::Role"
+    Properties:
+      AssumeRolePolicyDocument:
+        Version: "2012-10-17"
+        Statement:
+          - Action: "sts:AssumeRole"
+            Principal:
+              Service: lambda.amazonaws.com
+            Effect: Allow
+      Policies:
+        - PolicyName: Policy
+          PolicyDocument:
+            Version: "2012-10-17"
+            Statement:
+              - Effect: Allow
+                Resource: "arn:aws:logs:*:*:*"
+                Action:
+                  - "logs:CreateLogGroup"
+                  - "logs:CreateLogStream"
+                  - "logs:PutLogEvents"
+              - Effect: Allow
+                Resource: "*"
+                Action:
+                  - "lambda:InvokeFunction"
+              - Effect: Allow
+                Resource: "*"
+                Action:
+                  - "dynamodb:*"
