--- a/stack.yml
+++ b/stack.yml
@@ -5,6 +5,64 @@ Resources:
     Properties:
       BucketName: serverless-guestbook
 
+  LambdaPopulateS3:
+    Type: "AWS::Lambda::Function"
+    Properties:
+      FunctionName: PopulateS3
+      Handler: index.handler
+      Role: !GetAtt [ LambdaFunctionRole, Arn ]
+      Runtime: python2.7
+      Code:
+        ZipFile: >
+          import boto3
+
+          def handler(event, context):
+            s3_client = boto3.client('s3')
+            body = """
+              <html>
+                <head>
+                  <script type="text/javascript" src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
+                  <script type="text/javascript">
+                    const get_url   = "http://jsonplaceholder.typicode.com/users"
+                    const post_url  = "http://jsonplaceholder.typicode.com/posts"
+                    const list_messages = (messages) => { for (m of messages) $("#list").append(format(m)) }
+                    const format = (m) => `<li>${m.message}<br><small>posted by ${m.author} on ${m.date}</small></li>`
+                    const load_messages = () => $.get({ url: get_url }).then((messages) => list_messages(messages))
+                    const form_is_valid = () => $("#m").val().length > 0 && $("#a").val().length > 0
+                    const post_message = () => {
+                      if (form_is_valid()) {
+                        $("#list").empty()
+                        $.post({
+                          url:  post_url,
+                          data: { message: $("#m").val(), author: $("#a").val(), date: new Date().toISOString() }
+                        }).then(() => load_messages())
+                      } else alert("Please type a message and the author name!")
+                    }
+                  </script>
+                  <style>
+                    li { margin-bottom: 1rem; }
+                  </style>
+                </head>
+                <body onload="load_messages()">
+                  <hr>
+                  <b>New message: </b>
+                  <input id="m" placeholder="e.g. Hallo, world!">
+                  <b>by </b>
+                  <input id="a" placeholder="e.g. John Doe">
+                  <button onclick="post_message()">Post</button>
+                  <hr>
+                  <ul id="list"></ul>
+                  <hr>
+                </body>
+              </html>
+            """
+            response = s3_client.put_object(
+              Body=body,
+              Bucket='serverless-guestbook',
+              Key='index.html'
+            )
+            return response
+
   DB:
     Type: "AWS::DynamoDB::Table"
     Properties:
@@ -29,6 +87,7 @@ Resources:
       Code:
         ZipFile: >
           import boto3
+
           def handler(event, context):
               messages = []
               db_client = boto3.client('dynamodb')
@@ -59,9 +118,7 @@ Resources:
               - Effect: Allow
                 Resource: "arn:aws:logs:*:*:*"
                 Action:
-                  - "logs:CreateLogGroup"
-                  - "logs:CreateLogStream"
-                  - "logs:PutLogEvents"
+                  - "logs:*"
               - Effect: Allow
                 Resource: "*"
                 Action:
@@ -70,3 +127,7 @@ Resources:
                 Resource: "*"
                 Action:
                   - "dynamodb:*"
+              - Effect: Allow
+                Resource: "*"
+                Action:
+                  - "s3:*"
