--- a/stack.yml
+++ b/stack.yml
@@ -22,6 +22,12 @@ Resources:
             Action:
               - "s3:GetObject"
 
+  CustomResourcePopulateS3:
+    Type: "Custom::PopulateS3"
+    Version: 1.0
+    Properties:
+      ServiceToken: !GetAtt [ LambdaPopulateS3, Arn ]
+
   LambdaPopulateS3:
     Type: "AWS::Lambda::Function"
     Properties:
@@ -31,13 +37,39 @@ Resources:
       Runtime: python2.7
       Code:
         ZipFile: >
-          import boto3
+          import boto3, json
+
+          from botocore.vendored import requests
+
+          def send(event, context, responseStatus, responseData, physicalResourceId):
+            responseUrl = event['ResponseURL']
+            responseBody = {}
+            responseBody['Status'] = responseStatus
+            responseBody['Reason'] = 'See the details in CloudWatch Log Stream: ' + context.log_stream_name
+            responseBody['PhysicalResourceId'] = physicalResourceId or context.log_stream_name
+            responseBody['StackId'] = event['StackId']
+            responseBody['RequestId'] = event['RequestId']
+            responseBody['LogicalResourceId'] = event['LogicalResourceId']
+            responseBody['Data'] = responseData
+            json_responseBody = json.dumps(responseBody)
+            headers = {
+              'content-type' : '',
+              'content-length' : str(len(json_responseBody))
+            }
+            try:
+              response = requests.put(responseUrl,
+                                      data=json_responseBody,
+                                      headers=headers)
+            except Exception as e:
+              print "send(..) failed executing requests.put(..): " + str(e)
+
 
           def handler(event, context):
             s3_client = boto3.client('s3')
             body = """
               <html>
                 <head>
+                  <title>Serverless Guestbook</title>
                   <script type="text/javascript" src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
                   <script type="text/javascript">
                     const get_url   = "http://jsonplaceholder.typicode.com/users"
@@ -80,7 +112,7 @@ Resources:
               ContentType='text/html',
               ContentLanguage='html'
             )
-            return response
+            send(event, context, "SUCCESS", response, "CustomResourcePhysicalID")
 
   DB:
     Type: "AWS::DynamoDB::Table"
