--- a/stack.yml
+++ b/stack.yml
@@ -136,16 +136,40 @@ Resources:
           import boto3
 
           def handler(event, context):
-              messages = []
-              db_client = boto3.client('dynamodb')
-              items = db_client.scan(TableName='Messages', Select='ALL_ATTRIBUTES')['Items']
-              for item in items:
-                  messages.append({
-                      'message': item['Message']['S'],
-                      'author': item['Author']['S'],
-                      'date': item['Date']['S']
-                  })
-              return sorted(messages, key=lambda msg: msg['date'], reverse=True)
+            messages = []
+            db_client = boto3.client('dynamodb')
+            items = db_client.scan(TableName='Messages', Select='ALL_ATTRIBUTES')['Items']
+            for item in items:
+              messages.append({
+                'message':  item['Message']['S'],
+                'author':   item['Author']['S'],
+                'date':     item['Date']['S']
+              })
+            return sorted(messages, key=lambda msg: msg['date'], reverse=True)
+
+  LambdaPost:
+    Type: "AWS::Lambda::Function"
+    Properties:
+      FunctionName: PostMessage
+      Handler: index.handler
+      Role: !GetAtt [ LambdaFunctionRole, Arn ]
+      Runtime: python2.7
+      Code:
+        ZipFile: >
+          import boto3, datetime, uuid
+
+          def handler(event, context):
+            db_client = boto3.client('dynamodb')
+            response = db_client.put_item(
+              TableName = 'Messages',
+              Item = {
+                'MessageID':  { 'S': uuid.uuid1().urn },
+                'Message':    { 'S': event['Message'] },
+                'Author':     { 'S': event['Author'] },
+                'Date':       { 'S': datetime.datetime.utcnow().isoformat() }
+              }
+            )
+            return response
 
   LambdaFunctionRole:
     Type: "AWS::IAM::Role"
